#
# ParaStation
#
# Copyright (C) 2012 ParTec Cluster Competence Center GmbH, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#
# Author:       Thomas Moschny <moschny@par-tec.com>
#
include $(top_srcdir)/common.am

EXTRA_DIST = vcversion txt2man

dist_config_SCRIPTS = ps_ethernet ps_p4sock parastation-config
EXTRA_DIST += ps_ethernet.sh ps_p4sock.sh parastation-config.sh
CLEANFILES = ps_ethernet ps_p4sock parastation-config
