#
# ParaStation
#
# Copyright (C) 2012 ParTec Cluster Competence Center GmbH, Munich
#
# This file may be distributed under the terms of the Q Public License
# as defined in the file LICENSE.QPL included in the packaging of this
# file.
#
# Author:       Thomas Moschny <moschny@par-tec.com>
#
include $(top_srcdir)/common.am

AM_LDFLAGS += -avoid-version

lib_LTLIBRARIES = libp4tcp.la

libp4tcp_la_SOURCES = p4tcp.c
